namespace java au.com.cba.omnia.ebenezer.scrooge.hive

struct ParquetTestRecord {
  1: string entityId;
  2: string columnName;
}
