namespace java au.com.cba.omnia.ebenezer.scrooge.hive

struct SomeOtherRecord {
  1: string someString;
}
